fixes spacing on home page's icon divs

--- a/src/Sass/HomeSmall.scss
+++ b/src/Sass/HomeSmall.scss
@@ -47,6 +47,12 @@
                 margin: 5% auto;
             }
 
+            .indIconDiv {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
+
             .icon {
                 height: 120px;
                 width: 120px;
